<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.businessapplication.MainActivity">

    <LinearLayout
        android:id="@+id/main_front_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:padding="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="2dp"
            android:scaleType="center"
            android:src="@drawable/cover_photo" />

        <TextView
            style="@style/HeadingTextTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/name_of_business" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/location_icon" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/hour_icon" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/timing" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/email_icon" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/email" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/phone_icon" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/globe_icon" />

            <TextView
                style="@style/TextTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/url" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
